TS_Boiler_Plate/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ts-boilerplate
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
